src/test/ui/type-alias-impl-trait/argument-types.stderr
error[E0308]: mismatched types
  --> $DIR/argument-types.rs:10:9
   |
LL | type Foo = impl Debug;
   |            ---------- the expected opaque type
...
LL | fn foo1(mut x: Foo) {
   |                --- expected due to this parameter type
LL |     x = 22_u32;
   |         ^^^^^^ expected opaque type, found `u32`
   |
   = note: expected opaque type `impl Debug`
                     found type `u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
